--- a/idcs-sdk-sample-apps/nodejs/package.json
+++ b/idcs-sdk-sample-apps/nodejs/package.json
@@ -10,6 +10,7 @@
   "author": "Felippe Oliveira (felippe.oliveira@oracle.com)",
   "license": "ISC",
   "dependencies": {
+    "base64url": "3.0.1",
     "body-parser": "1.18.3",
     "bunyan": "1.8.12",
     "cache-manager": "2.9.0",
@@ -24,8 +25,8 @@
     "jwk-to-pem": "2.0.1",
     "lru": "^3.1.0",
     "passport": "0.4.0",
+    "passport-idcs": "^0.1.1",
     "promise": "8.0.3",
-    "request": "2.88.0",
-    "base64url": "3.0.1"
+    "request": "2.88.0"
   }
 }
